// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectAddress > should render disabled 1`] = `
<div>
  <button
    class="relative w-full rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 cursor-default"
    data-testid="SelectAddress__wrapper"
    disabled=""
    type="button"
  >
    <span
      class="absolute inset-y-0 left-14 flex items-center border border-transparent right-13 left-14"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="css-xk5t3v"
      disabled=""
    >
      <div
        class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
      />
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none text-theme-secondary-text css-1vs1awz"
          data-testid="SelectAddress__input"
          disabled=""
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="user"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="5"
                    r="4"
                  />
                  <path
                    d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render empty 1`] = `
<div>
  <button
    class="relative w-full rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-14 flex items-center border border-transparent right-13 left-14"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="css-n1b0kl"
    >
      <div
        class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
      />
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="user"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="5"
                    r="4"
                  />
                  <path
                    d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render invalid 1`] = `
<div>
  <button
    class="relative w-full rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-14 flex items-center border border-transparent right-13 left-14 right-24"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="css-12mz4i6"
    >
      <div
        class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
      />
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
        <div
          class="pl-3"
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="user"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="5"
                    r="4"
                  />
                  <path
                    d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render with preselected address 1`] = `
<div>
  <button
    class="relative w-full rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-14 flex items-center border border-transparent right-13 left-14"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      >
        <span
          class="font-semibold text-base text-theme-text"
          data-testid="Address__alias"
        >
          <span
            class="no-ligatures css-9nx3be"
            data-testid="TruncateEnd"
          >
            testwallet2
          </span>
        </span>
        <span
          class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
          data-testid="Address__address"
        >
          DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr
        </span>
      </div>
    </span>
    <div
      class="css-n1b0kl"
    >
      <div
        class="shrink-0 css-1p5jpah"
        data-testid="Avatar"
      >
        <div
          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(255, 87, 34)" width="100" height="100"/><circle r="55" cx="40" cy="30" fill="rgb(3, 169, 244)"/><circle r="35" cx="90" cy="70" fill="rgb(0, 188, 212)"/><circle r="60" cx="30" cy="40" fill="rgb(233, 30, 99)"/></svg>"
            title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
          />
        </div>
      </div>
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="user"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="5"
                    r="4"
                  />
                  <path
                    d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render without user icon 1`] = `
<div>
  <button
    class="relative w-full rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-14 flex items-center border border-transparent right-4 left-14"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="css-n1b0kl"
    >
      <div
        class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
      />
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
    </div>
  </button>
</div>
`;
